# stateless

./: .pre-commit-config.yaml  LICENSE  README.md  benchmarks.py  example.py  flake.nix  justfile  mkdocs.yml  pyproject.toml
.benchmarks/Darwin-CPython-3.13-64bit/: 0001_9a8122a12837532c9384b95b29c7d7c3b4c1f197_20251104_234726.json
.github/: release-drafter.yml
.github/actions/install-dependencies/: action.yml
.github/actions/test/: action.yml
.github/workflows/: dependencies.yml  pr.yml  release-drafter.yml  release.yml
docs/: index.md  stateless_api.md
docs/templates/python/material/: method.html
src/stateless/: __init__.py  abilities.py  ability.py  async_.py  console.py  constants.py  effect.py  errors.py  files.py  functions.py  handler.py  need.py  parallel.py  runtime.py  schedule.py  time.py
tests/: test_abilities.py  test_async.py  test_console.py  test_effect.py  test_file.py  test_handler.py  test_need.py  test_parallel.py  test_runtime.py  test_schedule.py  test_time.py  utils.py
