[tool.poetry]
name = "stateless"
version = "0.5.1"
description = "Statically typed, purely functional effects for Python"
authors = ["suned <sd@dybro-debel.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.8.0"
cloudpickle = "^3.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
ipdb = "^0.13.13"
ipython = "^8.17.2"
pytest = "^7.4.3"
pyright = "^1.1.336"
pre-commit = "^3.5.0"
ruff = "^0.1.6"


[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_any_generics = true

[tool.ruff]
select = ["I", "F", "N", "RUF", "D"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D211",
    "D213",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
