[tool.poetry]
name = "stateless"
version = "0.5.2"
description = "Statically typed, purely functional effects for Python"
authors = ["suned <sd@dybro-debel.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.8.0"
cloudpickle = "^3.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
ipdb = "^0.13.13"
ipython = "^8.17.2"
pytest = "^7.4.3"
pyright = "^1.1.336"
pre-commit = "^3.5.0"
ruff = "^0.14.2"
coverage = "^7.3.2"
toml = "^0.10.2"


[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_any_generics = true

[tool.ruff.lint]
select = ["I", "F", "N", "RUF", "D"]
ignore = ["D107", "D213", "D203", "D202", "D212"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]


[tool.coverage.report]
exclude_also = [
    "@overload"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
